Attempted fix for arrow not displayed on mobile

--- a/portfolio-website/src/app/contact/contact.component.scss
+++ b/portfolio-website/src/app/contact/contact.component.scss
@@ -77,9 +77,10 @@
 }
 
 #overlay .link a:before {
-    content: '\1F865';
+    // content: '\1F865';
+    content: "\2197";
     margin-right: 2px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    // font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @media screen and (max-width: 912px) {
